--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 contourpy==1.3.0
 cycler==0.12.1
+et-xmlfile==1.1.0
 fonttools==4.53.1
 gitdb==4.0.11
 GitPython==3.1.43
@@ -22,6 +23,7 @@ matplotlib==3.9.2
 mdurl==0.1.2
 narwhals==1.8.1
 numpy==2.1.1
+openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.2
 patsy==0.5.6
